<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:icon="@mipmap/icon_lessons"
            android:title="@string/strLessons" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@mipmap/icon_homework"
            android:title="@string/strHomework" />
        <item
            android:id="@+id/nav_session"
            android:icon="@mipmap/icon_session"
            android:title="@string/strSession" />
        <item
            android:id="@+id/nav_library"
            android:icon="@mipmap/icon_library"
            android:title="@string/library" />
        <!--
        <item
            android:id="@+id/nav_marks"
            android:icon="@mipmap/icon_marks"
            android:title="@string/strMarks" />
            -->

    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@mipmap/icon_chat"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@mipmap/icon_calendar"
            android:title="@string/calendar" />
    </group>
    </menu>
